dig-src/main/default/objects/DIG_MembershipLevel__mdt/DIG_MembershipLevel__mdt.object-meta.xml
<CustomObject>
    <label>DIG Membership Level</label>
    <pluralLabel>DIG Membership Levels</pluralLabel>
</CustomObject>