dig-src/main/default/objects/DIG_MembershipLevel__mdt/fields/DurationMonths__c.field-meta.xml
<CustomField>
    <fullName>DurationMonths__c</fullName>
    <label>Duration Months</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>