dig-src/main/default/objects/DIG_MembershipLevel__mdt/fields/GraceDays__c.field-meta.xml
<CustomField>
    <fullName>GraceDays__c</fullName>
    <label>Grace Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>