dig-src/main/default/objects/DIG_MembershipLevel__mdt/fields/IsPaidRequired__c.field-meta.xml
<CustomField>
    <fullName>IsPaidRequired__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Paid Required</label>
    <type>Checkbox</type>
</CustomField>