dig-src/main/default/objects/DIG_MembershipLevel__mdt/fields/LevelKey__c.field-meta.xml
<CustomField>
    <fullName>LevelKey__c</fullName>
    <label>Level Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>